--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
 <head>
     <meta name="viewport" content="width=device-width", initial-scale=1>
+    <meta name="google-site-verification" content="sKqKpxBLFGNEMUe3fqZm2mVmuUxS3vWj33Xzf0s_j0M" />
     <title>My Portfolio</title>
 </head>
 <body>
