--- a/index.html
+++ b/index.html
@@ -27,16 +27,16 @@
     <div class="top-container-b">
       <section class="bio">
         <h1><a id="bio">Bio</a></h1>
-        <p class="info">Hello I am Manish. I am currently learning about
-        HTML & CSS. Working on improving myself so that
-        i can start working as a freelance.  </p>
+        <p class="info">Hello I am Manish. I am a Frontend developer proficient in
+        HTML, CSS, JavaScript and React. Welcome to my portfolio website. </p>
         </section>
       <section class="project">
         <h1><a id="project">Projects</a></h1>
         <h3>Project List</h3>
-        <p class="info">soon to come!</p>
+        <p class="info">You can click on each project to directly visit the site where it is deployed or view my 
+            GitHub profile on<a href="https://github.com/Manishdas1975"> this link</a> for project code</p>
         <ul class="project-info-list">
-          <li>Project1</li>
+          <li><a href="https://weather-magic.surge.sh/">current weather website</li>
           <li>Project2</li>
         </ul>
       </section>
