--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <p class="info">You can click on each project to directly visit the site where it is deployed or view my 
             GitHub profile on<a href="https://github.com/Manishdas1975"> this link</a> for project code</p>
         <ul class="project-info-list">
-          <li><a href="https://weather-magic.surge.sh/">current weather website</li>
+          <li><a href="https://weather-magic.surge.sh/">current weather website</a></li>
           <li>Project2</li>
         </ul>
       </section>
