Updated the website

--- a/index.html
+++ b/index.html
@@ -1,55 +1,83 @@
 <!DOCTYPE html>
-<html>
-    <link rel="stylesheet" type="text/css" href="style.css">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+<html lang="en">
+<link rel="stylesheet" type="text/css" href="style.css">
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+  integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+
 <head>
-    <meta name="viewport" content="width=device-width", initial-scale=1>
-    
-    <meta name="google-site-verification" content="sKqKpxBLFGNEMUe3fqZm2mVmuUxS3vWj33Xzf0s_j0M" />
-    <title>My Portfolio</title>
+  <meta name="viewport" content="width=device-width" , initial-scale=1>
+
+  <meta name="google-site-verification" content="sKqKpxBLFGNEMUe3fqZm2mVmuUxS3vWj33Xzf0s_j0M" />
+  <title>My Portfolio</title>
 </head>
+
 <body>
-    <header class="main-header">
-      <div class="top-container-a">
-        <div class="title">
-          <h1>My Portfolio</h1>
+  <header class="main-header">
+    <div class="top-container-a">
+      <div class="title">
+        <h1>Manish Das
+
+        </h1>
+        <h2>Frontend developer
+        </h2>
+        <p class="info">I am Manish. I am a Frontend web developer proficient in
+          HTML, CSS, JavaScript and React. Welcome to my portfolio website. </p>
+        <div class="social">
+          <a href="https://github.com/Manishdas1975"><i class="fa fa-github fa-2x"></i></a>
+          <a href="https://www.linkedin.com/in/manish-d-9561581a7"><i class="fa fa-linkedin fa-2x"></i></a>
+          <a href="dasmanish6@gmail.com"><i class="fa fa-google fa-2x"></i></a>
         </div>
-        <nav class="main-nav">
-          <ul class="main-nav-list">
-            <li><a href="#bio">Bio</a></li>
-            <li><a href="#project">Projects</a></li>
-            <li><a href="#contact">Contact Me</a></li>
-          </ul>
-        </nav>
       </div>
-    </header>
-
-    <div class="top-container-b">
-      <section class="bio">
-        <h1><a id="bio">Bio</a></h1>
-        <p class="info">Hello I am Manish. I am a Frontend developer proficient in
-        HTML, CSS, JavaScript and React. Welcome to my portfolio website. </p>
-        </section>
-      <section class="project">
-        <h1><a id="project">Projects</a></h1>
-        <h3>Project List</h3>
-        <p class="info">You can click on each project to directly visit the site where it is deployed or view my 
-            GitHub profile on<a href="https://github.com/Manishdas1975"> this link</a> for project code</p>
-        <ul class="project-info-list">
-          <li><a href="https://weather-magic.surge.sh/">current weather website</a></li>
-          <li>Project2</li>
+      <nav class="main-nav">
+        <ul class="main-nav-list">
+          <!-- <li><a href="#bio">Bio</a></li> -->
+          <li><a href="#project">Projects</a></li>
+          <li><a href="#contact">Contact Me</a></li>
         </ul>
-      </section>
-      <section class="contact">
-        <h1><a id="contact">Contact Me</a></h1>
-          <p class="info">Thanks for visiting the website.</p>
-          <p class="info">Feel free to contact if you have a feedback.</p>
-      </section>
+      </nav>
     </div>
+  </header>
 
-    <footer>
-      <p><a href="mailto:dasmanish6@gmail.com?subject=Important Information" >dasmanish6</a>@gmail.com</p>
-      <p><a href="https://unsplash.com/@adamhornyak">Image by Adam Hornyak</a></p>
-    </footer>
+  <div class="top-container-b">
+    <section class="bio">
+      <!-- <h1><a id="bio">Bio</a></h1> -->
+
+    </section>
+    <section class="project">
+      <h1><a id="project">Projects</a></h1>
+      <h3>Project List</h3>
+      <p class="info">You can click on each project to directly visit the site where it is deployed or view my
+        GitHub profile on<a href="https://github.com/Manishdas1975"> this link</a> for project code</p>
+      <ul class="project-info-list">
+        <li>
+          <div class="project-box-a">
+            <a href="https://weather-magic.surge.sh/" target="blank"><img src="/img/weather.PNG"
+                alt="weather viewing website">
+            </a>
+            <p>website designed using HTML,CSS and JavaScript to take a city name and show the current temperature and
+              weather along with maximum and minimum temperature of the day.
+              It also has dynamic background as per the weather of the city. It uses an API for weather data.
+            </p>
+            <button><a href="https://github.com/Manishdas1975/weather-website">View Code</a></button>
+          </div>
+
+        </li>
+        <li class="project-box-b">
+          Project2
+        </li>
+      </ul>
+    </section>
+    <section class="contact">
+      <h1><a id="contact">Contact Me</a></h1>
+      <p class="info">Thanks for visiting the website.</p>
+      <p class="info">Feel free to contact if you have a feedback.</p>
+    </section>
+  </div>
+
+  <footer>
+    <p><a href="mailto:dasmanish6@gmail.com?subject=Important Information">dasmanish6</a>@gmail.com</p>
+    <p><a href="https://unsplash.com/@adamhornyak">Image by Adam Hornyak</a></p>
+  </footer>
 </body>
+
 </html>
