updated the project list
added another react project to portfolio

--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
       <ul class="project-info-list">
         <li>
           <div class="project-box-a">
-            <a href="https://weather-magic.surge.sh/" target="blank"><img src="/img/weather.PNG"
-                alt="weather viewing website">
+            <a href="https://weather-magic.surge.sh/" target="blank">
+              <img src="/img/weather.PNG" alt="weather viewing website">
             </a>
             <p>website designed using HTML,CSS and JavaScript to take a city name and show the current temperature and
               weather along with maximum and minimum temperature of the day.
@@ -62,8 +62,20 @@
           </div>
 
         </li>
-        <li class="project-box-b">
-          Project2
+        <li>
+          <br>
+        </li>
+        <li>
+          <div class="project-box-b">
+            <a href="https://hotelhilford.netlify.app/" target="blank">
+              <img src="/img/hotel-1.jpg" alt="mock Hotel website using React">
+            </a>
+            <p>website designed using ReactJS for a mock Hotel to act as an introduction to customers or landing page
+              with a contact us form and a image carousel to show the hotel and rooms
+            </p>
+            <button><a href="https://github.com/Manishdas1975/weather-website">View Code</a></button>
+          </div>
+
         </li>
       </ul>
     </section>
