--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div class="social">
           <a href="https://github.com/Manishdas1975"><i class="fa fa-github fa-2x"></i></a>
           <a href="https://www.linkedin.com/in/manish-d-9561581a7"><i class="fa fa-linkedin fa-2x"></i></a>
-          <a href="dasmanish6@gmail.com"><i class="fa fa-google fa-2x"></i></a>
+          <a href="mailto:dasmanish6@gmail.com?subject=Important Information"><i class="fa fa-google fa-2x"></i></a>
         </div>
       </div>
       <nav class="main-nav">
