Updated the index.html
removed the duplicate h1 tags.
added a meta-description tag

--- a/index.html
+++ b/index.html
@@ -5,8 +5,11 @@
   integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
 
 <head>
+  <meta charset="UTF-8">
+  <meta name="description" content="My Personal Portfolio website to showcase some projects i have done so far.">
+  <meta name="keywords" content="HTML, CSS, JavaScript">
+  <meta name="author" content="Manish Das">
   <meta name="viewport" content="width=device-width" , initial-scale=1>
-
   <meta name="google-site-verification" content="sKqKpxBLFGNEMUe3fqZm2mVmuUxS3vWj33Xzf0s_j0M" />
   <title>My Portfolio</title>
 </head>
@@ -40,11 +43,11 @@
 
   <div class="top-container-b">
     <section class="bio">
-      <!-- <h1><a id="bio">Bio</a></h1> -->
+      
 
     </section>
     <section class="project">
-      <h1><a id="project">Projects</a></h1>
+      <h2><a id="project">Projects</a></h2>
       <h3>Project List</h3>
       <p class="info">You can click on each project to directly visit the site where it is deployed or view my
         GitHub profile on<a href="https://github.com/Manishdas1975"> this link</a> for project code</p>
@@ -80,7 +83,7 @@
       </ul>
     </section>
     <section class="contact">
-      <h1><a id="contact">Contact Me</a></h1>
+      <h2><a id="contact">Contact Me</a></h2>
       <p class="info">Thanks for visiting the website.</p>
       <p class="info">Feel free to contact if you have a feedback.</p>
     </section>
