changed project link
changed the link of weather website to the github project page link

--- a/index.html
+++ b/index.html
@@ -54,14 +54,14 @@
       <ul class="project-info-list">
         <li>
           <div class="project-box-a">
-            <a href="https://weather-magic.surge.sh/" target="blank">
+            <a href="https://github.com/Manishdas1975/weatherwebsite" target="blank">
               <img src="/img/weather.PNG" alt="weather viewing website">
             </a>
             <p>website designed using HTML,CSS and JavaScript to take a city name and show the current temperature and
               weather along with maximum and minimum temperature of the day.
               It also has dynamic background as per the weather of the city. It uses an API for weather data.
             </p>
-            <button><a href="https://github.com/Manishdas1975/weather-website">View Code</a></button>
+            <button><a href="https://github.com/Manishdas1975/weatherwebsite">View Code</a></button>
           </div>
 
         </li>
